# final-project-cs

./: .gitignore  CMakeLists.txt  README.md  course.csv  presence.csv  scoreboard.csv  student.csv
database/: data_class.csv  data_course.csv  data_course_schedule.csv  data_presence.csv  data_score.csv  data_user.csv
src/: academic_roles.cpp  academic_roles.h  all_roles.h  bin  data_io.cpp  data_io.h  data_struct.h  esketit.cpp  lecturer_roles.cpp  lecturer_roles.h  main.cpp  menu.cpp  menu.h  screen.cpp  screen.h  student_roles.cpp  student_roles.h  test.cpp  test3.cpp
